Added css and html update
Added comments to both CSS and HTML files. The html rule is for the whole page. The rule is for the list items that in the unordered list that is in the nav and has a class of horizontal. The display is block.  The rule is for the first list item and it has a margin to the left of 2. The rule is for the anchor tags that are n the unordered list and in the id tag rightcol. When the inks are hovered by the cursor, the text turns black. Ready for review.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 </head>
-
+<!-- The anchor tags are in the list items that are in the unoredered list that is in the navigation element that is inside of the header. Also there is an img in the header. The header is in the body element.  -->
 <body>
     <header>
         <img src="pcglogo.jpg" alt="Park City Gazette" />
@@ -42,7 +42,7 @@
             </ul>
         </nav>
     </header>
-
+<!-- The section has an id of rightcol and has a nav element and within the nav element there are three unorderd list that have list items and have anchor tags. Each unordered list has a secondary heading.  -->
     <section id="rightcol">
         <nav>
             <ul>
@@ -68,6 +68,7 @@
             </ul>
         </nav>
     </section>
+    <!-- The article has a class of leftcol and inside of the article are secondary headings and paragraph tags. There is also an ordered list that has paragraph tags inside of the ordered list.  -->
     <article class="leftcol">
         <p>
             <h2>Local Woman Wins Marathon</h2>
